# woody

color-mixer-ws/: .gitattributes  Cargo.toml
color-mixer-ws/color-mixer/: Cargo.toml
color-mixer-ws/color-mixer/.cargo/: config.toml
color-mixer-ws/color-mixer/src/: lib.rs  strip.rs
color-mixer-ws/mixer-dioxus/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  trunk.html
color-mixer-ws/mixer-dioxus/.cargo/: config.toml
color-mixer-ws/mixer-dioxus/awerawer/: Cargo.toml
color-mixer-ws/mixer-dioxus/public/: style.css
color-mixer-ws/mixer-dioxus/src/: canvas.rs  main.rs
color-mixer-ws/pack/: Cargo.toml
color-mixer-ws/pack/src/: main.rs
color-mixer-ws/util/: commands.txt  web_server.py
effects/: Cargo.toml
effects/src/: lib.rs
harlot-board-dc/: .gitignore  .gitpod.Dockerfile  Cargo.toml  build.rs  gogo.sh
harlot-board-dc/.cargo/: config.toml
harlot-board-dc/docs/: README.md
harlot-board-dc/scripts/: flash.sh  run-wokwi.sh
harlot-board-dc/src/: apa_spi.rs  main.rs  wifi.rs
