[package]
name = "effects"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-leds = "0.3.0"
embedded-graphics = "0.7"
embedded-hal = "0.2.6"
defmt = "0.3"
micromath = "2"

[dependencies.palette]
version = "0.6"
default-features = false
features = ["libm"]
