[package]
name = "harlot-board"
version = "0.1.0"
authors = ["ace"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
experimental = []

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart", "native"] }
esp-idf-svc = { version="*", features = ["alloc"] }
esp-idf-hal = "*"
embedded-svc = "*"

log = "0.4"
anyhow = "1"
toml-cfg = "0.1"
#color-mixer = {path="../color-mixer/", features = ["esp"]}
color-mixer = {path="../color-mixer-ws/color-mixer", features = ["esp"]}
bytemuck = {version = "1", features=["derive"]}
static_assertions = "1.1.0"
serde = {version="1", features = ["derive"]}
serde_json = "1"
indexmap = {version="1.9.1", features=["serde"]}
heapless = "0.7"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
