[package]
name = "dioxus-mixer"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["chrono/wasmbind"]

[dependencies]
bytemuck = {version="1.9.1", features=["derive"]}
# palette = {version="0.6.0", features=["serializing"]}
palette = {git="https://github.com/Ogeon/palette.git", features=["serializing"]}
simple-easing = "1.0.0"
dioxus = { version = "0.2.4", features = ["web", "hooks"] }
fermi = "*"
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.19", features=["wasmbind"] }
gloo =  { version = "0.8", features = ["futures"] }
derive_more = "0.99.17"
indexmap = {version="1.9.1", features=["serde"]}
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
color-mixer = { path = "../color-mixer", features = ["wasm"] }
surf = {version="2.3", default_features=false, features=["wasm-client"]}
futures = "0.3"
piet = "0.5"
piet-web = "0.5"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wasm-bindgen = "0.2"
